# elekto

./: .env.example  Dockerfile  Makefile  README.md  config.py  console  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  security.md  utils.py
.github/workflows/: integration_tests.yml  main.yml  release-image.yml
docs/: README.md
elekto/: __init__.py  _env.py  constants.py  version.py
elekto/core/: election.py
elekto/models/: meta.py
elekto/templates/components/: sidebar.html
elekto/templates/views/elections/: candidate.html  single.html  view_ballots.html
installation/deployment/: deployment.yaml
integration_tests/: Dockerfile  Makefile  README.md  docker-compose.yaml
integration_tests/services/github-static-mock/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
integration_tests/services/github-static-mock/src/github_static_mock/: app.py  exceptions.py  models.py
integration_tests/tests/: conftest.py  test_login.py
scripts/validate-bios/: README.md  go.mod  validate-bios
test/core/: test_election.py
