[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elekto"
dynamic = ["version"]
description = "Community wide application for conducting elections"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Manish Sahani", email = "rec.manish.sahani@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.4.0",
    "beautifulsoup4>=4.13.4",
    "blinker>=1.9.0",
    "cffi>=1.17.1",
    "cryptography>=44.0.0",
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "markdown2>=2.5.2",
    "markupsafe>=3.0.2",
    "mysqlclient>=2.2.7",
    "psycopg2>=2.9.10",
    "pycparser>=2.22",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=1.4.49",
    "uwsgi>=2.0.28",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]

[project.optional-dependencies]
test = [
    "coverage>=7.8.0",
    "factory_boy>=3.3.3",
    "freezegun>=1.5.1",
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
]

[tool.setuptools-scm]

[tool.setuptools.packages.find]
include = ["elekto*"]
